--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
 <body>
-    <h1>SB APP Click to <a href="http://127.0.0.1:5000/contact">contact me</a></h1>
+
+<div class="container"><h1>Hello<a href="http://127.0.0.1:5000/contact"><h2>Contact Me</h2></a></h1></div>
+
 </body>
 </html>
